<resources>
    <string name="app_name">iTuition</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="home_action_search">"Search for tutor"</string>
    <string name="myaccount">Profile</string>
    <string name="popular_tutors">Popular Tutors</string>
    <string name="tutors_near_you">Tutors Near You</string>
    <string name="latest_reviews">Latest Reviews</string>
    <string name="profile">Profile</string>
    <string name="profile_picture_description">Profile picture</string>
    <string name="action_menu_logout">Log Out</string>
    <string name="search_hint">Search tutors based on subjects and locations</string>
    <string name="title_activity_volley_test">VolleyTestActivity</string>
    <string name="search_filter">Filter Results</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications">Notifications</string>

    <string name="sort_by">Sort by</string>
    <string name="home">Home</string>
    <string name="my_tuitions">My Tuitions</string>
    <string name="my_tutors">My Tutors</string>
    <string name="my_requests">My Requests</string>
    <string-array name="sorting_criteria">
        <item>Rating</item>
        <item>Salary</item>
    </string-array>
</resources>
