<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search_sm"
        android:title="@string/home_action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom"/>

    <item android:id="@+id/action_go_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_48dp"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_account_sm"
        android:title="@string/profile"
        app:showAsAction="never"/>

    <item android:id="@+id/action_my_tuition_sm"
        android:title="@string/my_tuitions"
        app:showAsAction="never"/>

    <item android:id="@+id/action_my_tutors_sm"
        android:title="@string/my_tutors"
        app:showAsAction="never"/>

    <item android:id="@+id/action_req_tuition_sm"
        android:title="@string/my_requests"
        app:showAsAction="never"/>

    <item android:id="@+id/logout_sm"
        android:title="@string/action_menu_logout"
        app:showAsAction="never"/>

</menu>