<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/action_search"
        android:title="@string/home_action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|always"/>


    <item
        android:id="@+id/action_notification"
        android:title="@string/notifications"
        android:icon="@drawable/ic_notification"
        android:menuCategory="secondary"
        android:orderInCategory="1"
        app:actionLayout="@layout/notification_badge"
        app:showAsAction="always" />

    <item android:id="@+id/action_account"
        android:title="@string/profile"
        app:showAsAction="never"/>

    <item android:id="@+id/logout"
        android:title="@string/action_menu_logout"
        app:showAsAction="never"/>

</menu>
