<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/home_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <android.support.design.widget.TabLayout
            app:tabMode="scrollable"
            android:id="@+id/home_tab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/home_toolbar"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <android.support.design.widget.TabItem
                android:id="@+id/tutors_near_you"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutors_near_you" />

            <android.support.design.widget.TabItem
                android:id="@+id/popular_tutors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular_tutors" />

            <android.support.design.widget.TabItem
                android:id="@+id/latest_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latest_reviews" />

        </android.support.design.widget.TabLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/home_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/home_tab"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/testCard"
            android:layout_below="@id/home_recycler_view"
            android:layout_centerHorizontal="true"
            android:text="Test"/>

    </RelativeLayout>
</ScrollView>